1st commit. User, wallet, token canisters complete. ready for testing. started the payment canister.

--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "type": "module",
   "workspaces": [
     "src/AxiaSystem_frontend"
-  ]
+  ],
+  "dependencies": {
+    "juno": "^0.0.3"
+  },
+  "devDependencies": {
+    "@junobuild/config": "^0.0.17"
+  }
 }
