--- a/src/AxiaSystem_frontend/package.json
+++ b/src/AxiaSystem_frontend/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "AxiaSystem_frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "axiasystem_frontend",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "setup": "npm i && dfx canister create AxiaSystem_backend && dfx generate AxiaSystem_backend && dfx deploy",
-    "start": "vite --port 3000",
-    "prebuild": "dfx generate",
-    "build": "tsc && vite build",
-    "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
+    "dev": "vite",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.3",
+    "vite": "^6.0.7"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "cross-fetch": "^3.1.6",
-    "dotenv": "^16.3.1",
-    "sass": "^1.63.6",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vite-plugin-environment": "^1.1.3",
-    "vitest": "^2.0.5"
-  },
-  "dependencies": {
-    "@dfinity/agent": "^1.4.0",
-    "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0",
-    "lit-html": "^2.8.0"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
