--- a/xrpl_bridge/Cargo.toml
+++ b/xrpl_bridge/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
-name = "xrpl_bridge"
+name = "namora_bridge"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "namora_bridge"
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
-uuid = { version = "1" }
+uuid = { version = "1", features = ["v4"] }
 anyhow = "1.0"
 libc = "0.2" 
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
@@ -23,3 +27,5 @@ base64ct = "1.8.0"
 rand = "0.8"
 chrono = "0.4.41"
 env_logger = "0.11.8"
+thiserror = "1.0"
+log = "0.4"
